--- a/projects/responsive-design/tribute-page/index.html
+++ b/projects/responsive-design/tribute-page/index.html
@@ -6,100 +6,105 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Document</title>
     <link rel="stylesheet" href="./resources/css/style.css" />
+    <link href="https://fonts.googleapis.com/css?family=Montez|Roboto&display=swap" rel="stylesheet">
   </head>
   <body>
     <main id="main">
-      <section class="" id="title-section">
-        <div class="" id="title">
-          <h1>
-            A tribute to the 'Missile Man' of India, Dr. A.P.J Abdul Kalam
-          </h1>
-        </div>
-        <div class="" id="img-div">
-          <img
-            src="./resources/images/abdul-kalam-title.jpg"
-            alt="Abdul Kalam title image"
-            class=""
-            id="image"
-          />
-          <div class="" id="img-caption">Abdul Kalam's quote on dreams</div>
-        </div>
-      </section>
+      <div class="main-container">
+        <section class="" id="title-section">
+          <div class="" id="title">
+            <h1>
+              A tribute to the 'Missile Man' of India, Dr. A.P.J Abdul Kalam
+            </h1>
+          </div>
+          <div class="" id="img-div">
+            <img
+              src="./resources/images/abdul-kalam-title.jpg"
+              alt="Abdul Kalam title image"
+              class=""
+              id="image"
+            />
+            <div class="text" id="img-caption">Abdul Kalam's quote on dreams</div>
+          </div>
+        </section>
 
-      <section class="" id="tribute-info">
-        <p class="description">
-          Avul Pakir Jainulabdeen “A. P. J.” Abdul Kalam was the 11th President
-          of India, serving from 2002 to 2007. Kalam was born and raised in
-          Rameswaram, Tamil Nadu, and studied physics and aerospace engineering.
-        </p>
+        <section class="" id="tribute-info">
+          <p class="description text">
+            Avul Pakir Jainulabdeen “A. P. J.” Abdul Kalam was the 11th
+            President of India, serving from 2002 to 2007. Kalam was born and
+            raised in Rameswaram, Tamil Nadu, and studied physics and aerospace
+            engineering.
+          </p>
 
-        <p class="description">
-          He spent the next four decades as a scientist and science
-          administrator, mainly at the Defence Research and Development
-          Organisation (DRDO) and Indian Space Research Organisation (ISRO), and
-          was intimately involved in India’s civilian space program and military
-          missile development efforts.
-        </p>
+          <p class="description text">
+            He spent the next four decades as a scientist and science
+            administrator, mainly at the Defence Research and Development
+            Organisation (DRDO) and Indian Space Research Organisation (ISRO),
+            and was intimately involved in India’s civilian space program and
+            military missile development efforts.
+          </p>
 
-        <ul class="facts">
-          <h3>Facts</h3>
-          <li class="fact">
-            <strong>1931</strong> - APJ Kalam was born into a poor family. His
-            father had only one boat to support his family.
-          </li>
-          <li class="fact">
-            <strong>1954</strong> - Kalam completed his graduation from Saint
-            Joseph’s College, Tiruchirappalli.
-          </li>
-          <li class="fact">
-            <strong>1955</strong> - He enrolled at the Madras Institute of
-            Technology.
-          </li>
-          <li class="fact">
-            <strong>1960</strong> - Kalam joined the Aeronautical Development
-            Establishment of the Defence Research and Development Organisation.
-          </li>
-          <li class="fact">
-            <strong>1970 - 1990</strong> - Kalam made an effort to develop the
-            Polar Satellite Launch Vehicle (PSLV) and SLV-III projects, both of
-            which proved to be successful. Kalam was known as the ‘Missile Man’
-            of India due to his continued, successful work with ballistic
-            missiles and launch vehicle technology.
-          </li>
-          <li class="fact">
-            <strong>2000</strong> - Kalam published 'Wings of Fire'. An
-            autobiography that gives a detailed account of his childhood, his
-            personal life and career.
-          </li>
-          <li class="fact">
-            <strong>2002 - 2007</strong> - Kalam served as the 11th President of
-            India. He was known as “the People’s President” because of his
-            simple and down-to-earth attitude.
-          </li>
-          <li class="fact">
-            <strong>2003 and 2006</strong> - He was awarded the MTV Youth Icon
-            award twice.
-          </li>
-          <li class="fact">
-            <strong>27 July 2015</strong> - Kalam travelled to Shillong to
-            deliver a lecture on "Creating a Livable Planet Earth" at the Indian
-            Institute of Management Shillong. While climbing a flight of stairs,
-            he experienced some discomfort, but was able to enter the auditorium
-            after a brief rest. He was rushed to the hospital but soon passed on
-            due to cardiac arrest.
-          </li>
-        </ul>
+          <ul class="facts">
+            <h3>Facts</h3>
+            <li class="fact text">
+              <strong>1931</strong> - APJ Kalam was born into a poor family. His
+              father had only one boat to support his family.
+            </li>
+            <li class="fact text">
+              <strong>1954</strong> - Kalam completed his graduation from Saint
+              Joseph’s College, Tiruchirappalli.
+            </li>
+            <li class="fact text">
+              <strong>1955</strong> - He enrolled at the Madras Institute of
+              Technology.
+            </li>
+            <li class="fact text">
+              <strong>1960</strong> - Kalam joined the Aeronautical Development
+              Establishment of the Defence Research and Development
+              Organisation.
+            </li>
+            <li class="fact text">
+              <strong>1970 - 1990</strong> - Kalam made an effort to develop the
+              Polar Satellite Launch Vehicle (PSLV) and SLV-III projects, both
+              of which proved to be successful. Kalam was known as the ‘Missile
+              Man’ of India due to his continued, successful work with ballistic
+              missiles and launch vehicle technology.
+            </li>
+            <li class="fact text">
+              <strong>2000</strong> - Kalam published 'Wings of Fire'. An
+              autobiography that gives a detailed account of his childhood, his
+              personal life and career.
+            </li>
+            <li class="fact text">
+              <strong>2002 - 2007</strong> - Kalam served as the 11th President
+              of India. He was known as “the People’s President” because of his
+              simple and down-to-earth attitude.
+            </li>
+            <li class="fact text">
+              <strong>2003 and 2006</strong> - He was awarded the MTV Youth Icon
+              award twice.
+            </li>
+            <li class="fact text">
+              <strong>27 July 2015</strong> - Kalam travelled to Shillong to
+              deliver a lecture on "Creating a Livable Planet Earth" at the
+              Indian Institute of Management Shillong. While climbing a flight
+              of stairs, he experienced some discomfort, but was able to enter
+              the auditorium after a brief rest. He was rushed to the hospital
+              but soon passed on due to cardiac arrest.
+            </li>
+          </ul>
 
-        <p>
-          Kalam was the third President of India to have been honored with a
-          Bharat Ratna, India's highest civilian honour, before becoming the
-          President. He was one the most loved presidents and will be dearly
-          missed. His dream and vision of a better tomorrow lives on in our
-          hearts.
-        </p>
-      </section>
+          <p class="text conclusion">
+            Kalam was the third President of India to have been honored with a
+            Bharat Ratna, India's highest civilian honour, before becoming the
+            President. He was one the most loved presidents and will be dearly
+            missed. His dream and vision of a better tomorrow lives on in our
+            hearts.
+          </p>
+        </section>
+      </div>
     </main>
-    <footer class="" id="footer">
+    <footer class="text" id="footer">
       Click
       <a
         href="https://en.wikipedia.org/wiki/A._P._J._Abdul_Kalam"
