--- a/projects/responsive-design/tribute-page/index.html
+++ b/projects/responsive-design/tribute-page/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Document</title>
     <link rel="stylesheet" href="./resources/css/style.css" />
-    <link href="https://fonts.googleapis.com/css?family=Montez|Roboto&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Montez|Montserrat:300|Open+Sans&display=swap" rel="stylesheet">
   </head>
   <body>
     <main id="main">
