--- a/projects/responsive-design/tribute-page/index.html
+++ b/projects/responsive-design/tribute-page/index.html
@@ -6,44 +6,48 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Document</title>
     <link rel="stylesheet" href="./resources/css/style.css" />
-    <link href="https://fonts.googleapis.com/css?family=Montez|Montserrat:300|Open+Sans&display=swap" rel="stylesheet">
+    <link
+      href="https://fonts.googleapis.com/css?family=Montez|Montserrat:300|Open+Sans&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <main id="main">
-      <div class="main-container">
-        <section class="" id="title-section">
-          <div class="" id="title">
-            <h1>
-              A tribute to the 'Missile Man' of India, Dr. A.P.J Abdul Kalam
-            </h1>
+      <section class="" id="title-section">
+        <div class="" id="title">
+          <h1>
+            A tribute to the 'Missile Man' of India
+          </h1>
+          <h1>Dr. A.P.J. Abdul Kalam</h1>
+        </div>
+        <div class="" id="img-div">
+          <img
+            src="./resources/images/abdul-kalam-title.jpg"
+            alt="Abdul Kalam title image"
+            class=""
+            id="image"
+          />
+          <div class="text caption" id="img-caption">
+            Abdul Kalam's quote on dreams
           </div>
-          <div class="" id="img-div">
-            <img
-              src="./resources/images/abdul-kalam-title.jpg"
-              alt="Abdul Kalam title image"
-              class=""
-              id="image"
-            />
-            <div class="text" id="img-caption">Abdul Kalam's quote on dreams</div>
-          </div>
-        </section>
+        </div>
+      </section>
 
-        <section class="" id="tribute-info">
-          <p class="description text">
-            Avul Pakir Jainulabdeen “A. P. J.” Abdul Kalam was the 11th
-            President of India, serving from 2002 to 2007. Kalam was born and
-            raised in Rameswaram, Tamil Nadu, and studied physics and aerospace
-            engineering.
-          </p>
+      <section class="" id="tribute-info">
+        <p class="description text introduction">
+          Avul Pakir Jainulabdeen “A. P. J.” Abdul Kalam was the 11th President
+          of India, serving from 2002 to 2007. Kalam was born and raised in
+          Rameswaram, Tamil Nadu, and studied physics and aerospace engineering.
+        </p>
 
-          <p class="description text">
-            He spent the next four decades as a scientist and science
-            administrator, mainly at the Defence Research and Development
-            Organisation (DRDO) and Indian Space Research Organisation (ISRO),
-            and was intimately involved in India’s civilian space program and
-            military missile development efforts.
-          </p>
-
+        <p class="description text introduction">
+          He spent the next four decades as a scientist and science
+          administrator, mainly at the Defence Research and Development
+          Organisation (DRDO) and Indian Space Research Organisation (ISRO), and
+          was intimately involved in India’s civilian space program and military
+          missile development efforts.
+        </p>
+        <div class="fact-container">
           <ul class="facts">
             <h3>Facts</h3>
             <li class="fact text">
@@ -93,16 +97,15 @@
               but soon passed on due to cardiac arrest.
             </li>
           </ul>
+        </div>
 
-          <p class="text conclusion">
-            Kalam was the third President of India to have been honored with a
-            Bharat Ratna, India's highest civilian honour, before becoming the
-            President. He was one the most loved presidents and will be dearly
-            missed. His dream and vision of a better tomorrow lives on in our
-            hearts.
-          </p>
-        </section>
-      </div>
+        <p class="text conclusion">
+          Kalam was the third President of India to have been honored with a
+          Bharat Ratna, India's highest civilian honor. He was one the most
+          loved presidents and will be dearly missed. His dream and vision of a
+          better tomorrow will live on in our hearts for eternity.
+        </p>
+      </section>
     </main>
     <footer class="text" id="footer">
       Click
