Adding box-shadow and centering the layout further to provide a box feeling

--- a/projects/responsive-design/tribute-page/index.html
+++ b/projects/responsive-design/tribute-page/index.html
@@ -34,19 +34,22 @@
       </section>
 
       <section class="" id="tribute-info">
-        <p class="description text introduction">
-          Avul Pakir Jainulabdeen “A. P. J.” Abdul Kalam was the 11th President
-          of India, serving from 2002 to 2007. Kalam was born and raised in
-          Rameswaram, Tamil Nadu, and studied physics and aerospace engineering.
-        </p>
+        <div class="description">
+          <p class="text introduction">
+            Avul Pakir Jainulabdeen “A. P. J.” Abdul Kalam was the 11th
+            President of India, serving from 2002 to 2007. Kalam was born and
+            raised in Rameswaram, Tamil Nadu, and studied physics and aerospace
+            engineering.
+          </p>
 
-        <p class="description text introduction">
-          He spent the next four decades as a scientist and science
-          administrator, mainly at the Defence Research and Development
-          Organisation (DRDO) and Indian Space Research Organisation (ISRO), and
-          was intimately involved in India’s civilian space program and military
-          missile development efforts.
-        </p>
+          <p class="text introduction">
+            He spent the next four decades as a scientist and science
+            administrator, mainly at the Defence Research and Development
+            Organisation (DRDO) and Indian Space Research Organisation (ISRO),
+            and was intimately involved in India’s civilian space program and
+            military missile development efforts.
+          </p>
+        </div>
         <div class="fact-container">
           <ul class="facts">
             <h3>Facts</h3>
